[gd_scene load_steps=6 format=3 uid="uid://kna3wka5eglg"]

[ext_resource type="Texture2D" uid="uid://da3mc7dtg3lup" path="res://assets/items/medal.png" id="1_m08tx"]
[ext_resource type="Script" path="res://ItemDisplay.gd" id="2_p5wem"]
[ext_resource type="FontFile" uid="uid://bokge8vr1onw8" path="res://fonts/Rasa-Regular.ttf" id="3_fg2v0"]
[ext_resource type="FontFile" uid="uid://fc8k1v45yhjb" path="res://fonts/Rasa-Bold.ttf" id="3_p5o7y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_23j5t"]
bg_color = Color(1, 1, 1, 0.666667)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ItemDisplay" type="TextureRect" node_paths=PackedStringArray("scoreLabel", "textLabel", "infoRoot") groups=["id"]]
custom_minimum_size = Vector2(75, 75)
offset_right = 75.0
offset_bottom = 75.0
texture = ExtResource("1_m08tx")
expand_mode = 3
stretch_mode = 5
script = ExtResource("2_p5wem")
scoreLabel = NodePath("PanelContainer/MarginContainer/VBoxContainer/Score")
textLabel = NodePath("PanelContainer/MarginContainer/VBoxContainer/Text")
infoRoot = NodePath("PanelContainer")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 70.0
offset_bottom = 76.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_23j5t")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Text" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = -3
theme_override_fonts/normal_font = ExtResource("3_fg2v0")
theme_override_fonts/bold_font = ExtResource("3_p5o7y")
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 12
text = "This is some info text."

[node name="Score" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.462745, 0.352941, 0.152941, 1)
theme_override_colors/font_outline_color = Color(0.854902, 0.854902, 0.854902, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_p5o7y")
theme_override_font_sizes/font_size = 12
text = "Score: 15"
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="onMouseEnterItem"]
[connection signal="mouse_exited" from="." to="." method="onMouseLeaveItem"]
